[package]
name = "rust-weather-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
colored = "2"
